# dfpNumber.sys

./: Cargo.toml  README.md  Taskfile.yml  build.rs
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml  test-macos.yml  test-ubuntu.yml  test-windows.yml
benches/: bid128_add.rs  bid128_from_string.rs  bid128_mul.rs  bid128_to_string.rs  dec_number_add.rs
src/: bid128.rs  bid128_000.rs  common.rs  dec128_000.rs  lib.rs
tests/: bid128_000.rs  dec128_000.rs  mod.rs
