[package]
name = "dfp-number-sys"
version = "0.0.1"
authors = ["Dariusz Depta <dariusz.depta@engos.software>"]
description = "Rust bindings for Intel(R) Decimal Floating-Point Math Library v2.2"
documentation = "https://docs.rs/dfp-number-sys"
repository = "https://github.com/EngosSoftware/dfpNumber.sys.git"
license = "MIT"
edition = "2021"

[dependencies]
libc = "0.2.126"

[build-dependencies]
cc = "1.0.73"