[package]
name = "dfp-number-sys"
version = "0.0.5"
authors = ["Dariusz Depta <dariusz.depta@engos.software>"]
description = "Rust bindings for Intel(R) Decimal Floating-Point Math Library"
documentation = "https://docs.rs/dfp-number-sys"
repository = "https://github.com/EngosSoftware/dfpNumber.sys.git"
license = "MIT"
edition = "2021"

[dependencies]
libc = "0.2.132"

[build-dependencies]
cc = "1.0.73"

[features]
call-by-reference = [] # Function arguments and return values will be passed by reference if this feature is set.
global-rounding = [] # The value of the rounding mode will be stored in a global variable if this feature is set.
global-exception-flags = [] # The value of the exception status flags will be stored in a global variable if this feature is set.