[package]
name = "dfp-number-sys"
version = "0.0.12"
authors = ["Dariusz Depta <code@senees.de>"]
description = "Rust bindings for Intel(R) Decimal Floating-Point Math Library"
documentation = "https://docs.rs/dfp-number-sys"
repository = "https://github.com/senees/dfpNumber.sys.git"
license = "MIT"
edition = "2021"

[dependencies]
libc = "0.2.133"

[build-dependencies]
cc = "1.0.73"

[features]
# Function arguments and return values will be passed by reference when this feature is set.
call-by-reference = []

# The value of the rounding mode will be stored in a global variable when this feature is set.
global-rounding = []

# The value of the exception status flags will be stored in a global variable when this feature is set.
global-exception-flags = []